--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-20.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-20.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  AppLovin, IBD Stock Of The Day, Earns Positive Reviews For New Service	AppLovin 是当今的 IBD 股票，新服务获得正面评价
+  AppLovin, IBD Stock Of The Day, Earns Positive Reviews For New Service
 image: /assets/img/stock-of-the-day/2024-12-20.jpg
 date: 2024-12-20 18:24 -0800
 author: PATRICK SEITZ
@@ -12,90 +12,71 @@ author: PATRICK SEITZ
 
 
 
-**AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the app marketing platform earns positive reviews for its nascent e-commerce advertising service.  
-**AppLovin** （[App](https://research.investors.com/quote.aspx?symbol=APP)） 是 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为该应用营销平台因其新兴的电子商务广告服务而获得好评。
+**AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the app marketing platform earns positive reviews for its nascent e-commerce advertising service.  
 
 
-In a client note Thursday, UBS analyst Chris Kuntarich provided favorable data points related to AppLovin's e-commerce ads offering.  
-在周四的客户报告中，瑞银分析师 Chris Kuntarich 提供了与 AppLovin 的电子商务广告产品相关的有利数据点。
+In a client note Thursday, UBS analyst Chris Kuntarich provided favorable data points related to AppLovin's e-commerce ads offering.  
 
 
 
 
-He spoke with an executive at a beauty and cosmetics brand with $70 million in advertising spending in 2024. The executive "was bullish on spending with AppLovin," based on encouraging results, Kuntarich said.  
-他与一家美容和化妆品品牌的高管进行了交谈，该品牌在 2024 年的广告支出为 7000 万美元。Kuntarich 表示，基于令人鼓舞的结果，这位高管“看好在 AppLovin 上的支出”。
+He spoke with an executive at a beauty and cosmetics brand with $70 million in advertising spending in 2024. The executive "was bullish on spending with AppLovin," based on encouraging results, Kuntarich said.  
 
 
-The brand executive said AppLovin's e-commerce beta program likely includes "a few hundred" advertisers, he said. Kuntarich has a buy rating on AppLovin stock.  
-这位品牌高管表示，AppLovin 的电子商务测试计划可能包括“几百个”广告商。Kuntarich 对 AppLovin 股票的评级为买入。
+The brand executive said AppLovin's e-commerce beta program likely includes "a few hundred" advertisers, he said. Kuntarich has a buy rating on AppLovin stock.  
 
 
-AppLovin's business to date has largely been driven by ads for mobile gamers. It is now looking to diversify.  
-迄今为止，AppLovin 的业务主要由面向移动游戏玩家的广告驱动。它现在正在寻求多元化。
+AppLovin's business to date has largely been driven by ads for mobile gamers. It is now looking to diversify.  
 
 
-AppLovin's software platform enables app developers to market, monetize and analyze their apps. The Palo Alto, Calif.-based company also makes mobile games such as "Wordscapes," "Matchington Mansion" and "Game of War."  
-AppLovin 的软件平台使应用开发者能够营销、变现和分析他们的应用。这家总部位于加利福尼亚州帕洛阿尔托的公司还制作手机游戏，例如“Wordscapes”、“Matchington Mansion”和“Game of War”。
+AppLovin's software platform enables app developers to market, monetize and analyze their apps. The Palo Alto, Calif.-based company also makes mobile games such as "Wordscapes," "Matchington Mansion" and "Game of War."  
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), AppLovin stock jumped 7% to close at 340.99.  
-[在今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/)上，AppLovin 股价上涨 7%，收于 340.99 点。
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), AppLovin stock jumped 7% to close at 340.99.  
 
 
-AppLovin Stock Is On Three IBD ListsAppLovin 股票在三个 IBD 名单上
-----------------------------------------------------------
+AppLovin Stock Is On Three IBD Lists
+------------------------------------
 
 
-AppLovin stock is [consolidating](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) after finding support at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) line, according to [IBD analysis](https://get.investors.com/ibd-live/).  
-根据 [IBD 分析](https://get.investors.com/ibd-live/)，AppLovin 股票在其 [21 天指数移动平均](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)线获得支撑后正在[盘整](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/)。
+AppLovin stock is [consolidating](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) after finding support at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) line, according to [IBD analysis](https://get.investors.com/ibd-live/).  
 
 
-Last week, AppLovin stock fell after it was [passed over for inclusion in the S&P 500](https://www.investors.com/news/technology/applovin-stock-tumbles-after-sp500-rejection/) during the index's quarterly rebalancing.  
-上周，AppLovin 股票在该指数的季度再平衡期间[被纳入标准普尔 500](https://www.investors.com/news/technology/applovin-stock-tumbles-after-sp500-rejection/) 指数后下跌。
+Last week, AppLovin stock fell after it was [passed over for inclusion in the S&P 500](https://www.investors.com/news/technology/applovin-stock-tumbles-after-sp500-rejection/) during the index's quarterly rebalancing.  
 
 
-Oppenheimer analyst Martin Yang called that drop a "very good [buying opportunity](https://www.investors.com/news/technology/applovin-stock-pullback-called-buying-opportunity/) for one of the most exciting growth companies at a reasonable valuation."  
-Oppenheimer 分析师 Martin Yang 称，“对于估值合理的最令人兴奋的成长型公司之一来说，这是一个非常好的[买入机会](https://www.investors.com/news/technology/applovin-stock-pullback-called-buying-opportunity/)”。
+Oppenheimer analyst Martin Yang called that drop a "very good [buying opportunity](https://www.investors.com/news/technology/applovin-stock-pullback-called-buying-opportunity/) for one of the most exciting growth companies at a reasonable valuation."  
 
 
-Earlier this week, Jefferies analyst James Heaney reiterated his buy rating on AppLovin stock with a price target of 400. He called APP stock a "top pick for 2025."  
-本周早些时候，Jefferies 分析师 James Heaney 重申了他对 AppLovin 股票的买入评级，目标价为 400。他称 APP 股票是“2025 年的首选”。
+Earlier this week, Jefferies analyst James Heaney reiterated his buy rating on AppLovin stock with a price target of 400. He called APP stock a "top pick for 2025."  
 
 
-Heaney cited AppLovin's growing share in e-commerce ad spending for his upbeat report.  
-Heaney 在他的乐观报告中提到了 AppLovin 在电子商务广告支出中不断增长的份额。
+Heaney cited AppLovin's growing share in e-commerce ad spending for his upbeat report.  
 
 
-AppLovin stock is on three IBD lists: [Big Cap 20](https://research.investors.com/stock-lists/big-cap-20/), [SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) and [Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-dec-19-2024/). IBD added AppLovin to SwingTrader on Friday.  
-AppLovin 股票在三个 IBD 名单上：[Big Cap 20](https://research.investors.com/stock-lists/big-cap-20/)、[SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) 和 [Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-dec-19-2024/)。IBD 周五将 AppLovin 添加到 SwingTrader。
+AppLovin stock is on three IBD lists: [Big Cap 20](https://research.investors.com/stock-lists/big-cap-20/), [SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) and [Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-dec-19-2024/). IBD added AppLovin to SwingTrader on Friday.  
 
 
 
-*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://x.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.  
-在 [@IBD\_PSeitz](https://x.com/IBD_PSeitz) 上关注 Patrick Seitz 的 X（前身为 Twitter），了解有关消费技术、软件和半导体股票的更多故事。*
+*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://x.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.* 
 
 
-**YOU MAY ALSO LIKE:  您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Netflix Preps For Big Week: 2 NFL Games, 'Squid Games 2'  
-Netflix 为重要周做准备：2 场 NFL 比赛，“鱿鱼游戏 2”](https://www.investors.com/news/technology/netflix-stock-video-streamer-preps-for-big-week/)
+[Netflix Preps For Big Week: 2 NFL Games, 'Squid Games 2'](https://www.investors.com/news/technology/netflix-stock-video-streamer-preps-for-big-week/) 
 
 
-[AI Fueling Duolingo's Next Growth Phase, Analyst Says  
-分析师表示，AI 推动 Duolingo 进入下一个增长阶段](https://www.investors.com/news/technology/duolingo-stock-price-target-hike-ai-prospects/)
+[AI Fueling Duolingo's Next Growth Phase, Analyst Says](https://www.investors.com/news/technology/duolingo-stock-price-target-hike-ai-prospects/) 
 
 
-[See Stocks On The List Of Leaders Near A Buy Point  
-查看靠近买入点的领先者名单上的股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
+[See Stocks On The List Of Leaders Near A Buy Point](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) 
 
 
-[Find Winning Stocks With MarketSurge Pattern Recognition & Custom Screens  
-通过MarketSurge模式识别和自定义屏幕找到获胜的股票](https://get.investors.com/marketsurge/?src=apa1bq)
+[Find Winning Stocks With MarketSurge Pattern Recognition & Custom Screens](https://get.investors.com/marketsurge/?src=apa1bq) 
 
 
-[Join IBD Live For Stock Ideas Each Morning Before The Open  
-每天早上开盘前加入 IBD Live 以获取股票观点](https://get.investors.com/ibd-live/)
+[Join IBD Live For Stock Ideas Each Morning Before The Open](https://get.investors.com/ibd-live/) 
 
 
 
