--- a/_columns/Swing_Trading/zh-cn/2024-11-22.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-22.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Relative Strength Line: Good Guide For Buys And Sells In Postelection Bump	相对强弱线：选后颠簸中买入和卖出的良好指南
+  Relative Strength Line: Good Guide For Buys And Sells In Postelection Bump
 date: 2024-11-22 16:50 -0800
 image: /assets/img/swing-trading/2024-11-22.jpg
 author: JUSTIN NIELSEN
@@ -11,30 +11,25 @@ author: JUSTIN NIELSEN
 
 
 
-The past week saw some spectacular moves with plenty of stocks garnering investors' attention. But you only have so much room in your portfolio. How do you know what's deserving of a coveted spot as a position? Or when something seems like it's underperforming, how do you know when it might be time to jump to something else? That's where a relative strength line can hold a lot of answers.  
-过去一周出现了一些引人注目的波动，大量股票吸引了投资者的关注。但您的投资组合中只有这么多空间。你怎么知道什么值得作为令人垂涎的位置？或者，当某项业务似乎表现不佳时，您如何知道何时该跳至其他业务呢？这就是相对强弱线可以容纳很多答案的地方。
+The past week saw some spectacular moves with plenty of stocks garnering investors' attention. But you only have so much room in your portfolio. How do you know what's deserving of a coveted spot as a position? Or when something seems like it's underperforming, how do you know when it might be time to jump to something else? That's where a relative strength line can hold a lot of answers.  
 
 
 
 
-Swing Trading Example: XLY波段交易示例：XLY
-------------------------------------
+Swing Trading Example: XLY
+--------------------------
 
 
-The last few columns focused on stocks breaking out on the big postelection bump. The SPDR Consumer Discretionary Shares Expanded Tech Software ETF ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)), was another of those top performers. Like many of the best stocks the day after the election, XLY had its initial strength on election day, before anything was known **(1)**. An important tell was that the relative strength line was confirming the price strength as it reached new highs as well.  
-最后几篇专栏重点介绍了股市在选举后的大幅上涨。SPDR Consumer Discretionary Shares Expanded Tech Software ETF （[XLY](https://research.investors.com/quote.aspx?symbol=XLY)） 是另一个表现最好的股票。与选举后第二天的许多最佳股票一样，XLY 在选举日开始走强，当时还没有知道任何事情 **（1）。**一个重要的迹象是，相对强弱线也证实了价格强势，因为它也达到了新高。
+The last few columns focused on stocks breaking out on the big postelection bump. The SPDR Consumer Discretionary Shares Expanded Tech Software ETF ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)), was another of those top performers. Like many of the best stocks the day after the election, XLY had its initial strength on election day, before anything was known **(1)**. An important tell was that the relative strength line was confirming the price strength as it reached new highs as well.  
 
 
-With the postelection gap-up in indexes, we started XLY as a three-fourths position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(2)**. We quickly added another quarter a couple of hours later after making over 1.5% of progress.  
-随着指数大选后的跳空上升，我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **（2）** 上将 XLY 作为四分之三的位置开始。在取得超过 1.5% 的进度后，我们在几个小时后迅速增加了另一个 25 分。
+With the postelection gap-up in indexes, we started XLY as a three-fourths position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(2)**. We quickly added another quarter a couple of hours later after making over 1.5% of progress.  
 
 
-Just a few days later we had a 5% profit **(3)**. For an unleveraged ETF that's impressive. Additionally, the relative strength line continued to trend higher showing us that we were getting outperformance vs. the S&P 500.  
-仅仅几天后，我们就有了 5% 的利润 **（3）。**对于无杠杆 ETF 来说，这令人印象深刻。此外，相对强弱线继续走高，表明我们的表现优于标准普尔 500 指数。
+Just a few days later we had a 5% profit **(3)**. For an unleveraged ETF that's impressive. Additionally, the relative strength line continued to trend higher showing us that we were getting outperformance vs. the S&P 500.  
 
 
-Still we decided to lock in some profits with a quarter trim as XLY pulled in a bit **(4)** and another quarter the next day while we still had a roughly 5% gain **(5)**.  
-尽管如此，我们还是决定通过削减一个季度来锁定一些利润，因为 XLY 略微回撤 **（4），**第二天又减息了一个季度，而我们仍然有大约 5% 的收益 **（5）。**
+Still we decided to lock in some profits with a quarter trim as XLY pulled in a bit **(4)** and another quarter the next day while we still had a roughly 5% gain **(5)**.  
 
 
 
@@ -42,8 +37,7 @@ Still we decided to lock in some profits with a quarter trim as XLY pulled in a 
 ---
 
 
-[**Mike Webster shares how he uses the relative strength line to make decisions  
-Mike Webster 分享了他如何使用相对强弱线来做出决策**](https://www.youtube.com/watch?v=vLMarfulkdc)
+[**Mike Webster shares how he uses the relative strength line to make decisions**](https://www.youtube.com/watch?v=vLMarfulkdc) 
 
 
 
@@ -51,60 +45,48 @@ Mike Webster 分享了他如何使用相对强弱线来做出决策**](https://w
 ---
 
 
-Relative Strength Line Guides The Sell相对强弱线引导卖出
------------------------------------------------
+Relative Strength Line Guides The Sell
+--------------------------------------
 
 
-As the market indexes pulled back, XLY was still holding up above its 10-day moving average line. When it started to bounce from that level **(6)**, we increased our position back to a full position.  
-随着市场指数回落，XLY 仍保持在 10 天移动平均线上方。当它开始从该水平 **（6）** 反弹时，我们将头寸增加到满位。
+As the market indexes pulled back, XLY was still holding up above its 10-day moving average line. When it started to bounce from that level **(6)**, we increased our position back to a full position.  
 
 
-We survived the shakeout the next day **(7)** holding as XLY recovered to the highs of the day.  
-我们在第二天 **（7）** 的震荡中幸存下来，因为 XLY 恢复到当天的高点。
+We survived the shakeout the next day **(7)** holding as XLY recovered to the highs of the day.  
 
 
-The next day wasn't too bad, but XLY couldn't get back above the 10-day line and its relative strength line started dipping **(8)**. That led to us reducing the position by half again.  
-第二天还不错，但 XLY 无法回到 10 日线上方，其相对强弱线开始下降 **（8）。**这导致我们再次将位置减少了一半。
+The next day wasn't too bad, but XLY couldn't get back above the 10-day line and its relative strength line started dipping **(8)**. That led to us reducing the position by half again.  
 
 
-Even though XLY was up the next day **(9)**, the relative strength line was still down. When dealing with ETFs, it's important to know what moves them. In the case of XLY, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Telsa** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) are the two heavyweights accounting for roughly 40% of the ETF's moves.  
-尽管 XLY 第二天上涨 **（9），**但相对强弱线仍然下跌。在处理 ETF 时，了解是什么推动了它们很重要。就 XLY 而言，**亚马逊** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**特斯拉** （[TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)） 是两个重量级的，约占 ETF 走势的 40%。
+Even though XLY was up the next day **(9)**, the relative strength line was still down. When dealing with ETFs, it's important to know what moves them. In the case of XLY, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Telsa** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) are the two heavyweights accounting for roughly 40% of the ETF's moves.  
 
 
 
-The relative strength line on Amazon was even worse than XLY. With that potential drag, the relative strength line told us we could use that money elsewhere. Some other ETFs that got added immediately following our exit included positions in financials, insurance, small caps and infrastructure. Though XLY was up solidly today, three out of four of those additions to other ETFs are up even more, while the other one is even with XLY.  
-亚马逊的相对强弱线甚至比 XLY 还要差。由于这种潜在的拖累，相对强弱线告诉我们可以将这笔钱用在其他地方。在我们退出后立即添加的其他一些 ETF 包括金融、保险、小盘股和基础设施的头寸。尽管 XLY 今天强劲上涨，但其他 ETF 的新增股票中有四分之三上涨得更多，而另一只与 XLY 持平。
+The relative strength line on Amazon was even worse than XLY. With that potential drag, the relative strength line told us we could use that money elsewhere. Some other ETFs that got added immediately following our exit included positions in financials, insurance, small caps and infrastructure. Though XLY was up solidly today, three out of four of those additions to other ETFs are up even more, while the other one is even with XLY.  
 
 
-Besides price, the relative strength line can be one of your most important guides for investment decisions.  
-除了价格，相对强弱线可以成为您投资决策的最重要指南之一。
+Besides price, the relative strength line can be one of your most important guides for investment decisions.  
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
 
 
-**YOU MAY ALSO LIKE:  您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
 
 
-[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
-Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
+[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment) 
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns  
-如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops  
-弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations) 
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
 
 
 
