--- a/_columns/The_Big_Picture/zh-cn/2024-12-17.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-17.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Steps Back As Nasdaq, S&P 500 Suffer Mild Distribution Days; Fed Decision Up Next	由于纳斯达克、标准普尔 500 指数的分布日温和，股市回落;美联储决定 接下来
+  Stock Market Steps Back As Nasdaq, S&P 500 Suffer Mild Distribution Days; Fed Decision Up Next
 date: 2024-12-17 17:38 -0800
 author: KEN SHREVE
 ---
@@ -10,62 +10,61 @@ author: KEN SHREVE
 
 
 
-Sellers came into the stock market Tuesday as the two-day Federal Reserve meeting got underway. Several growth stocks came under heavy selling pressure again, although the signals were hard to find.  
-周二，随着为期两天的美联储会议的进行，卖家进入股市。几只成长股再次面临沉重的抛售压力，尽管信号很难找到。
-
-
-The Russell 2000 fared the worst with a decline of 1.2%. The small-cap index closed just above its 50-day moving average. The Dow Jones Industrial Average extended its losing streak to nine sessions and closed just below its 50-day line.  
-罗素 2000 指数表现最差，下跌 1.2%。小盘股指数收于略高于其 50 天移动平均线。道琼斯工业平均指数将连跌势头扩大至 9 个交易日，收盘价略低于 50 日线。
+Sellers came into the stock market Tuesday as the two-day Federal Reserve meeting got underway. Several growth stocks came under heavy selling pressure again, although the signals were hard to find.[重试
+  
+ 
 
 
 
-
-The last time the Dow Jones fell for nine straight sessions was in 1978, according to Dow Jones data. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) weighed on the blue-chip index with a loss of more than 3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) also lagged with losses of nearly 2%.  
-根据道琼斯的数据，道琼斯指数上一次连续九个交易日下跌是在 1978 年。**UnitedHealth Group** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 以超过 3% 的跌幅拖累蓝筹股指数。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 也落后，下跌了近 2%。
+错误原因](javascript:void(0))
 
 
-Selling also continued in the broad-based New York Stock Exchange composite index, which fell nearly 0.6% and marked its eighth loss in nine trading sessions. The NYSE composite fell further below its 50-day moving average after giving up the support level late last week.  
-基础广泛的纽约证券交易所综合指数也继续抛售，该指数下跌近 0.6%，这是 9 个交易日以来的第 8 次下跌。纽约证券交易所综合指数在上周晚些时候回吐支撑位后，进一步跌破其 50 天移动平均线。
+The Russell 2000 fared the worst with a decline of 1.2%. The small-cap index closed just above its 50-day moving average. The Dow Jones Industrial Average extended its losing streak to nine sessions and closed just below its 50-day line.[重试
+  
+ 
 
 
-But sell signals were few and far between among top growth stocks. **Credo Technology** ([CRDO](https://research.investors.com/quote.aspx?symbol=CRDO)) crashed nearly 10% in the [MarketSurge Growth 250](https://marketsurge.investors.com), but only closed slightly below its 10-day moving average. **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) slumped nearly 4%, but after two straight bullish up sessions in a row, the decline didn't look too bad. Broadcom held inside of Monday's range and closed near its session high.  
-但在顶级成长股中，卖出信号很少，而且相差甚远。**Credo Technology** （[CRDO）](https://research.investors.com/quote.aspx?symbol=CRDO) 在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中暴跌近 10%，但收盘价仅略低于其 10 天移动平均线。**博通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 暴跌近 4%，但在连续两个交易日看涨后，跌幅看起来并不算太糟糕。博通保持在周一的区间内，收于盘中高点附近。
+
+错误原因](javascript:void(0))
 
 
-The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund, a good proxy for growth stocks, pared an intraday loss of nearly 3% to 1% by the close.  
-Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金是成长型股票的良好代表，收盘时盘中跌幅缩小了近 3% 至 1%。
 
 
-**T-Mobile US** ([TMUS](https://research.investors.com/quote.aspx?symbol=TMUS)), however, did flash a sell signal with a sharp break of its 50-day line. Shares slumped 3.8% in heavy volume.  
-然而，**T-Mobile US** （[TMUS）](https://research.investors.com/quote.aspx?symbol=TMUS) 确实发出了卖出信号，大幅突破了其 50 天线。股价大幅下跌 3.8%。
+The last time the Dow Jones fell for nine straight sessions was in 1978, according to Dow Jones data. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) weighed on the blue-chip index with a loss of more than 3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) also lagged with losses of nearly 2%.[重试
+  
+ 
 
 
-Stock Market Bulls Encouraged By Tamer Selling股市多头受到温和抛售的鼓舞
------------------------------------------------------------
+
+错误原因](javascript:void(0))
 
 
-Still, stock market bulls were at least partly encouraged by tamer selling in the Nasdaq composite and S&P 500, which edged lower by 0.3% and 0.4%, respectively. Both indexes suffered mild distribution days, raising the count to three on the Nasdaq and four on the S&P 500. It's not a count that raises a major red flag, but distribution days are worth monitoring because when they start to cluster, it almost always causes problems for a stock market uptrend.  
-尽管如此，纳斯达克综合指数和标准普尔 500 指数的温和抛售至少在一定程度上鼓励了股市多头，纳斯达克综合指数和标准普尔 500 指数分别小幅下跌 0.3% 和 0.4%。这两个指数的分布日都表现温和，纳斯达克指数增加到 3 个，标准普尔 500 指数增加到 4 个。这不是一个引发重大危险信号的计数，但分发日值得监控，因为当它们开始聚集时，它几乎总是会给股市上升趋势带来问题。
+Selling also continued in the broad-based New York Stock Exchange composite index, which fell nearly 0.6% and marked its eighth loss in nine trading sessions. The NYSE composite fell further below its 50-day moving average after giving up the support level late last week.
+
+
+But sell signals were few and far between among top growth stocks. **Credo Technology** ([CRDO](https://research.investors.com/quote.aspx?symbol=CRDO)) crashed nearly 10% in the [MarketSurge Growth 250](https://marketsurge.investors.com), but only closed slightly below its 10-day moving average. **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) slumped nearly 4%, but after two straight bullish up sessions in a row, the decline didn't look too bad. Broadcom held inside of Monday's range and closed near its session high.
+
+
+The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund, a good proxy for growth stocks, pared an intraday loss of nearly 3% to 1% by the close.
+
+
+**T-Mobile US** ([TMUS](https://research.investors.com/quote.aspx?symbol=TMUS)), however, did flash a sell signal with a sharp break of its 50-day line. Shares slumped 3.8% in heavy volume.
+
+
+Stock Market Bulls Encouraged By Tamer Selling
+----------------------------------------------
+
+
+Still, stock market bulls were at least partly encouraged by tamer selling in the Nasdaq composite and S&P 500, which edged lower by 0.3% and 0.4%, respectively. Both indexes suffered mild distribution days, raising the count to three on the Nasdaq and four on the S&P 500. It's not a count that raises a major red flag, but distribution days are worth monitoring because when they start to cluster, it almost always causes problems for a stock market uptrend.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP3x4_121724.jpg)
 
 
-Despite the small losses, losers beat winners on the Nasdaq exchange by nearly 2-to-1. The ratio was about 5-to-2 negative on the NYSE.  
-尽管损失很小，但纳斯达克交易所的输家以近 2 比 1 的比分击败了赢家。纽约证券交易所的比率约为 5 比 2。
+Despite the small losses, losers beat winners on the Nasdaq exchange by nearly 2-to-1. The ratio was about 5-to-2 negative on the NYSE.
 
 
-Weak breadth has been on display for a while now as large-cap technology names like **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)), among others, continue to lead the stock market.  
-随着**苹果** （[AAPL）、](https://research.investors.com/quote.aspx?symbol=AAPL)**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 等大型科技股继续引领股市，广度疲软已经展示了一段时间。
-
-
-
-
----
-
-
-**[Get Alerts To Stocks Near Buy Points With Leaderboard  
-通过排行榜获取 Buy Points 附近股票的警报](https://leaderboard.investors.com/#/)**
+Weak breadth has been on display for a while now as large-cap technology names like **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)), among others, continue to lead the stock market.
 
 
 
@@ -73,75 +72,68 @@ Weak breadth has been on display for a while now as large-cap technology names l
 ---
 
 
-But waning breadth hasn't been tough to navigate if you're holding some big winners like **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)) and **Square** ([SQ](https://research.investors.com/quote.aspx?symbol=SQ)). And there are plenty of other stock market leaders showing relative strength and holding above short-term support levels like the 10- and 21-day lines. If you own big leaders like these, they've been easy holds.  
-但是，如果您持有 **Shopify** （[SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)）、**DoorDash** （[DASH）](https://research.investors.com/quote.aspx?symbol=DASH) 和 **Square** （[SQ](https://research.investors.com/quote.aspx?symbol=SQ)） 等大赢家，那么广度下降并不难驾驭。还有许多其他股市领导者表现出相对强势，并守住 10 日线和 21 日线等短期支撑位上方。如果您拥有这样的大领导者，他们很容易被抓住。
+**[Get Alerts To Stocks Near Buy Points With Leaderboard](https://leaderboard.investors.com/#/)**
 
 
-Tough Environment For New Buys新买家的艰难环境
---------------------------------------
 
 
-The current stock market environment, however, has gotten a lot more challenging when it comes to new buys. Take **Curtiss-Wright** ([CW](https://research.investors.com/quote.aspx?symbol=CW)) in the aerospace and defense group. The stock broke out of a downtrend Monday, soaring nearly 5% in high volume. But sellers knocked Curtiss-Wright sharply lower Tuesday in even higher volume.  
-然而，当前的股市环境在新购买方面变得更具挑战性。以航空航天和国防集团的 **Curtiss-Wright** （[CW）](https://research.investors.com/quote.aspx?symbol=CW) 为例。该股周一突破了下跌趋势，在高成交量中飙升了近 5%。但卖家周二以更高的成交量大幅下跌 Curtiss-Wright。
+---
 
 
-In the enterprise software group, **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)) cleared a cup-with-handle base Thursday and closed nicely above a 306.63 handle entry. But sellers hit the stock hard Friday. Manhattan on Tuesday closed 3.8% below the buy point.  
-在企业软件组，**Manhattan Associates（曼哈特公司**）周四清除了一个带手柄的杯子底部，并很好地收于 306.63 手柄入口上方。但卖家周五对该股造成了沉重打击。曼哈顿周二收盘价低于买入点位 3.8%。
+But waning breadth hasn't been tough to navigate if you're holding some big winners like **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)) and **Square** ([SQ](https://research.investors.com/quote.aspx?symbol=SQ)). And there are plenty of other stock market leaders showing relative strength and holding above short-term support levels like the 10- and 21-day lines. If you own big leaders like these, they've been easy holds.
 
 
-Meanwhile, the wild speculation continued in unproven names like **Quantum Computing** ([QUBT](https://research.investors.com/quote.aspx?symbol=QUBT)). The company is losing money and has no revenue to speak of, yet shares surged 65% Monday and another 50% Tuesday. In the same area, **Rigetti Computing** ([RGTI](https://research.investors.com/quote.aspx?symbol=RGTI)) jumped 32%, bringing its weekly gain to just over 55%. Rigetti is also losing money and shows two straight quarters of declining revenue.  
-与此同时，量子**计算** （[QUBT](https://research.investors.com/quote.aspx?symbol=QUBT)） 等未经证实的名称仍在继续进行疯狂的猜测。该公司正在亏损，没有收入可言，但股价周一飙升了 65%，周二又飙升了 50%。在同一领域，**Rigetti Computing** （[RGTI）](https://research.investors.com/quote.aspx?symbol=RGTI) 上涨 32%，使其每周涨幅略高于 55%。Rigetti 也在亏损，并显示出连续两个季度的收入下降。
+Tough Environment For New Buys
+------------------------------
 
 
-All Eyes On The Fed万众瞩目
------------------------
+The current stock market environment, however, has gotten a lot more challenging when it comes to new buys. Take **Curtiss-Wright** ([CW](https://research.investors.com/quote.aspx?symbol=CW)) in the aerospace and defense group. The stock broke out of a downtrend Monday, soaring nearly 5% in high volume. But sellers knocked Curtiss-Wright sharply lower Tuesday in even higher volume.
 
 
-The 10-year Treasury yield closed off highs after hitting a high of 4.43%. It was recently trading flat around 4.40%.  
-10 年期美国国债收益率在触及 4.43% 的高点后收于高点。它最近的交易价格在 4.40% 左右持平。
+In the enterprise software group, **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)) cleared a cup-with-handle base Thursday and closed nicely above a 306.63 handle entry. But sellers hit the stock hard Friday. Manhattan on Tuesday closed 3.8% below the buy point.
 
 
-Before the open, retail sales rose 0.7% in November, a little better than the 0.5% consensus. October's sales gain was revised slightly higher to 0.5% from 0.4%. Excluding autos, sales edged higher by 0.2%, a little below the 0.4% consensus  
-开盘前，11 月零售额增长 0.7%，略好于市场预期的 0.5%。10 月份的销售额增长从 0.4% 略微上调至 0.5%。不包括汽车，销售额小幅增长 0.2%，略低于市场预期的 0.4%
+Meanwhile, the wild speculation continued in unproven names like **Quantum Computing** ([QUBT](https://research.investors.com/quote.aspx?symbol=QUBT)). The company is losing money and has no revenue to speak of, yet shares surged 65% Monday and another 50% Tuesday. In the same area, **Rigetti Computing** ([RGTI](https://research.investors.com/quote.aspx?symbol=RGTI)) jumped 32%, bringing its weekly gain to just over 55%. Rigetti is also losing money and shows two straight quarters of declining revenue.
 
 
-The retail sales data came as the two-day Federal Reserve meeting got underway. The Fed is widely expected to lower the federal funds rate by another 25 basis to a range of 4.25% to 4.5%. The decision is due Wednesday at 2 p.m. ET.  
-零售销售数据发布之际，为期两天的美联储会议正在进行中。市场普遍预计美联储将再将联邦基金利率下调 25 个基点至 4.25% 至 4.5% 的区间。该决定将于美国东部时间周三下午 2 点做出。
+All Eyes On The Fed
+-------------------
 
 
-As it stands now, futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) only expect two rate cuts next year. But the Fed will have more inflation to ponder Friday when the Personal Income and Spending report is released at 8:30 a.m. ET.  
-就目前而言，[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的期货交易员预计明年只会降息两次。但美联储将有更多的通胀需要考虑，届时美国东部时间周五上午 8：30 将发布个人收入和支出报告。
+The 10-year Treasury yield closed off highs after hitting a high of 4.43%. It was recently trading flat around 4.40%.
 
 
-Inside the report, the Fed's preferred inflation gauge — the core personal consumption expenditures index — is expected to tick higher to 2.9%, up slightly from October's reading of 2.8%. Committee members want to see this number closer to 2%.  
-在报告中，美联储首选的通胀指标——核心个人消费支出指数——预计将升至 2.9%，略高于 10 月份的 2.8%。委员会成员希望看到这个数字更接近 2%。
+Before the open, retail sales rose 0.7% in November, a little better than the 0.5% consensus. October's sales gain was revised slightly higher to 0.5% from 0.4%. Excluding autos, sales edged higher by 0.2%, a little below the 0.4% consensus
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121724.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121724.pdf)。
+The retail sales data came as the two-day Federal Reserve meeting got underway. The Fed is widely expected to lower the federal funds rate by another 25 basis to a range of 4.25% to 4.5%. The decision is due Wednesday at 2 p.m. ET.
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+As it stands now, futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) only expect two rate cuts next year. But the Fed will have more inflation to ponder Friday when the Personal Income and Spending report is released at 8:30 a.m. ET.
 
 
-**YOU MAY ALSO LIKE:  您可能还喜欢：**
+Inside the report, the Fed's preferred inflation gauge — the core personal consumption expenditures index — is expected to tick higher to 2.9%, up slightly from October's reading of 2.8%. Committee members want to see this number closer to 2%.
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121724.pdf).
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+**YOU MAY ALSO LIKE:**
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
 
