--- a/_columns/The_Big_Picture/zh-cn/2024-12-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Struggles After Fed Sell-Off; Key Inflation Data Next	美联储抛售后股市陷入困境;关键通胀数据 下一个
+  Stock Market Struggles After Fed Sell-Off; Key Inflation Data Next
 date: 2024-12-19 17:43 -0800
 author: SCOTT LEHTONEN
 ---
@@ -10,26 +10,21 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market closed at session lows Thursday, as the major stock indexes struggled in the wake of Wednesday's Federal Reserve-fueled plunge.  
-周四股市收于盘中低点，主要股指在周三美联储推动的暴跌后苦苦挣扎。
+The stock market closed at session lows Thursday, as the major stock indexes struggled in the wake of Wednesday's Federal Reserve-fueled plunge.  
 
 
-The Dow Jones Industrial Average cut gains to less than 0.1%, narrowly breaking a 10-day losing streak. The S&P 500 reversed lower 0.1%. The tech-heavy Nasdaq composite also gave up solid gains to fall 0.1%, as the small cap Russell 2000 index lost 0.5%.  
-道琼斯工业平均指数将涨幅降至 0.1% 以下，勉强打破了连续 10 天的下跌。标准普尔 500 指数反转下跌 0.1%。以科技股为主的纳斯达克综合指数也回吐了稳健的涨幅，下跌 0.1%，因为小盘股罗素 2000 指数下跌 0.5%。
+The Dow Jones Industrial Average cut gains to less than 0.1%, narrowly breaking a 10-day losing streak. The S&P 500 reversed lower 0.1%. The tech-heavy Nasdaq composite also gave up solid gains to fall 0.1%, as the small cap Russell 2000 index lost 0.5%.  
 
 
 
 
-Only four of the 11 S&P 500 sectors ended higher, with utilities and financials rising the most. The 10-year Treasury yield climbed to 4.57%. That's its highest level since May 29, per Dow Jones Market Data. The real estate and materials sectors were the day's biggest losers.  
-标准普尔 500 指数的 11 个板块中只有 4 个收高，其中公用事业和金融板块涨幅最大。10 年期美国国债收益率攀升至 4.57%。根据道琼斯市场数据，这是自 5 月 29 日以来的最高水平。房地产和材料板块是当天最大的输家。
+Only four of the 11 S&P 500 sectors ended higher, with utilities and financials rising the most. The 10-year Treasury yield climbed to 4.57%. That's its highest level since May 29, per Dow Jones Market Data. The real estate and materials sectors were the day's biggest losers.  
 
 
-Volume fell on the Nasdaq and the New York Stock Exchange from Wednesday's busy session.  
-纳斯达克和纽约证券交易所的成交量从周三的繁忙交易时段开始下降。
+Volume fell on the Nasdaq and the New York Stock Exchange from Wednesday's busy session.  
 
 
-Up next, Wall Street will shift its attention to Friday's personal income and outlays report. That report includes the core PCE price index, which is the Federal Reserve's favored inflation reading. The core PCE price index is expected to rise 0.2% for the month of November, with an annual increase of 2.9%, per Econoday.  
-接下来，华尔街将把注意力转移到周五的个人收入和支出报告上。该报告包括核心 PCE 价格指数，这是美联储青睐的通胀读数。据 Econoday 报道，预计 11 月核心 PCE 价格指数将上涨 0.2%，年涨幅为 2.9%。
+Up next, Wall Street will shift its attention to Friday's personal income and outlays report. That report includes the core PCE price index, which is the Federal Reserve's favored inflation reading. The core PCE price index is expected to rise 0.2% for the month of November, with an annual increase of 2.9%, per Econoday.  
 
 
 
@@ -37,8 +32,7 @@ Up next, Wall Street will shift its attention to Friday's personal income and ou
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market  
-英伟达、苹果和特斯拉重点介绍如何处理这个股票市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/) 
 
 
 
@@ -46,28 +40,23 @@ Up next, Wall Street will shift its attention to Friday's personal income and ou
 ---
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-In the Dow Jones index, **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were the top performers Thursday, with gains of 2.6% and 1.8%, respectively. **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)) also a positive contributor to the price-weighted index.  
-在道琼斯指数中，**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和美国**运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 周四表现最佳，分别上涨 2.6% 和 1.8%。**Visa** （[V](https://research.investors.com/quote.aspx?symbol=V)） 也是价格加权指数的积极贡献者。
+In the Dow Jones index, **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were the top performers Thursday, with gains of 2.6% and 1.8%, respectively. **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)) also a positive contributor to the price-weighted index.  
 
 
-On the downside, **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) sold off 2.2% and 2.1%, respectively, while **Chevron** ([CVX](https://research.investors.com/quote.aspx?symbol=CVX)) was also a big laggard.  
-不利的一面是，**家得宝** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） 和 **UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 分别下跌了 2.2% 和 2.1%，而**雪佛龙** （[CVX](https://research.investors.com/quote.aspx?symbol=CVX)） 也落后了。
+On the downside, **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) sold off 2.2% and 2.1%, respectively, while **Chevron** ([CVX](https://research.investors.com/quote.aspx?symbol=CVX)) was also a big laggard.  
 
 
-In the Nasdaq 100, **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)) and **Moderna** ([MRNA](https://research.investors.com/quote.aspx?symbol=MRNA)) were among the best stocks on the day, while **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) (which [gave a weak outlook](https://www.investors.com/news/technology/mu-stock-micron-gives-weak-fiscal-q2-outlook/)) and **Vertex Pharmaceuticals** ([VRTX](https://research.investors.com/quote.aspx?symbol=VRTX)) (a [disappointing pain-drug trial](https://www.investors.com/news/technology/vertex-stock-lower-back-pain-non-opioid-drug/)) plunged.  
-在纳斯达克 100 指数中，**Marvell Technology** （[MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)） 和 **Moderna** （[MRNA）](https://research.investors.com/quote.aspx?symbol=MRNA) 是当天表现最好的股票之一，而 **Micron Technology** （[MU）（](https://research.investors.com/quote.aspx?symbol=MU)[前景不佳](https://www.investors.com/news/technology/mu-stock-micron-gives-weak-fiscal-q2-outlook/)）和 **Vertex Pharmaceuticals** （[VRTX](https://research.investors.com/quote.aspx?symbol=VRTX)）（一项[令人失望的止痛药试验](https://www.investors.com/news/technology/vertex-stock-lower-back-pain-non-opioid-drug/)）暴跌。
+In the Nasdaq 100, **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)) and **Moderna** ([MRNA](https://research.investors.com/quote.aspx?symbol=MRNA)) were among the best stocks on the day, while **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) (which [gave a weak outlook](https://www.investors.com/news/technology/mu-stock-micron-gives-weak-fiscal-q2-outlook/)) and **Vertex Pharmaceuticals** ([VRTX](https://research.investors.com/quote.aspx?symbol=VRTX)) (a [disappointing pain-drug trial](https://www.investors.com/news/technology/vertex-stock-lower-back-pain-non-opioid-drug/)) plunged.  
 
 
-The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) gained 0.3%. **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) declined another 0.9%, adding to Wednesday's plunge.  
-[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)周四收盘涨跌互现，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 上涨 0.3%。**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 再次下跌 0.9%，延续了周三的暴跌。
+The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) gained 0.3%. **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) declined another 0.9%, adding to Wednesday's plunge.  
 
 
-The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund climbed 0.2%. Despite that modest gains, [the IBD 50](https://research.investors.com/stock-lists/ibd-50/) had a number of solid winners on the session, including **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) (up nearly 4%) and **Doximity** ([DOCS](https://research.investors.com/quote.aspx?symbol=DOCS)) (up 5.7%).  
-Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金上涨 0.2%。尽管涨幅不大，[但 IBD 50](https://research.investors.com/stock-lists/ibd-50/) 在盘中仍有许多稳固的赢家，包括 **Palantir Technologies** （[PLTR）（](https://research.investors.com/quote.aspx?symbol=PLTR)上涨近 4%）和 **Doximity** （[DOCS）（](https://research.investors.com/quote.aspx?symbol=DOCS)上涨 5.7%）。
+The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund climbed 0.2%. Despite that modest gains, [the IBD 50](https://research.investors.com/stock-lists/ibd-50/) had a number of solid winners on the session, including **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) (up nearly 4%) and **Doximity** ([DOCS](https://research.investors.com/quote.aspx?symbol=DOCS)) (up 5.7%).  
 
 
 
@@ -75,8 +64,7 @@ Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=F
 ---
 
 
-[**Already Dethroned By Apple, Nvidia Suffers This Downgrade  
-已经被 Apple 推翻的 Nvidia 遭受降级**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
+[**Already Dethroned By Apple, Nvidia Suffers This Downgrade**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
 
 
 
@@ -84,27 +72,23 @@ Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=F
 ---
 
 
-What Investors Should Do Now投资者现在应该做什么
---------------------------------------
+What Investors Should Do Now
+----------------------------
 
 
 ![market pulse](https://www.investors.com/wp-content/uploads/2024/12/MP121924-213x300.jpg)
 
 
-Following Wednesday's stock market plunge, IBD reduced its recommended exposure level to 60%-80%. And Thursday saw more bearish action, as the S&P 500 and Nasdaq gave up solid gains to close lower and at session lows.  
-在周三股市暴跌后，IBD 将其建议的风险敞口水平下调至 60%-80%。周四出现了更多的看跌行动，因为标准普尔 500 指数和纳斯达克指数回吐了强劲的涨幅，收盘走低并处于盘中低点。
+Following Wednesday's stock market plunge, IBD reduced its recommended exposure level to 60%-80%. And Thursday saw more bearish action, as the S&P 500 and Nasdaq gave up solid gains to close lower and at session lows.  
 
 
-Meanwhile, the [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, tumbled nearly 13% to 24.09. Wednesday's surge was a sure sign of fear on Wall Street.  
-与此同时，[芝加哥期权交易所市场波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility) （VIX） 下跌近 13% 至 24.09。周三的飙升无疑是华尔街恐惧的迹象。
+Meanwhile, the [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, tumbled nearly 13% to 24.09. Wednesday's surge was a sure sign of fear on Wall Street.  
 
 
-Amid the recent weakness, investors should be utilizing diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). It's important to monitor positions that are acting out of character and sell any stocks that trigger sell rules.  
-在最近的疲软中，投资者应该利用勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。监控行为不正常的头寸并卖出任何触发卖出规则的股票非常重要。
+Amid the recent weakness, investors should be utilizing diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). It's important to monitor positions that are acting out of character and sell any stocks that trigger sell rules.  
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, while the Near Pivot list has dwindled to only one, **Adtalem Global Education** ([ATGE](https://research.investors.com/quote.aspx?symbol=ATGE)). That's a signal that new breakouts could be days away. If the market continues to stabilize, then be on the lookout for stocks approaching new buy points.  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中没有新股，而 Near Pivot 名单已减少到只有一只，即 **Adtalem Global Education** （[ATGE）。](https://research.investors.com/quote.aspx?symbol=ATGE)这是一个信号，表明新的爆发可能在几天后出现。如果市场继续企稳，那么请留意接近新买入点的股票。
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, while the Near Pivot list has dwindled to only one, **Adtalem Global Education** ([ATGE](https://research.investors.com/quote.aspx?symbol=ATGE)). That's a signal that new breakouts could be days away. If the market continues to stabilize, then be on the lookout for stocks approaching new buy points.  
 
 
 
@@ -112,8 +96,7 @@ Amid the recent weakness, investors should be utilizing diligent [risk managemen
 ---
 
 
-[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks  
-“应用程序”拥有它——Palantir 和其他 26 只股票也是如此**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -121,58 +104,47 @@ Amid the recent weakness, investors should be utilizing diligent [risk managemen
 ---
 
 
-Stocks Market Leaders: Alphabet, Meta, TSMC股市领导者：Alphabet、Meta、TSMC
--------------------------------------------------------------------
+Stocks Market Leaders: Alphabet, Meta, TSMC
+-------------------------------------------
 
 
-Stock market leaders to watch include **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)), **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)).  
-值得关注的股市领导者包括 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)）、**Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 和**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)）。
+Stock market leaders to watch include **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)), **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)).  
 
 
 
-Google parent Alphabet moved up 0.1% after trimming a 2.4% gain. Shares are back in the buy range from a cup-with-handle's 182.49 buy point, per [IBD MarketSurge chart analysis.](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) But it's risky to buy as a stock trends lower.  
-谷歌母公司 Alphabet 在收窄了 2.4% 的涨幅后上涨 0.1%。根据 [IBD MarketSurge 图表分析](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)，股价从带把手杯的 182.49 买入点回到买入区间。但是，随着股票走低，买入是有风险的。
+Google parent Alphabet moved up 0.1% after trimming a 2.4% gain. Shares are back in the buy range from a cup-with-handle's 182.49 buy point, per [IBD MarketSurge chart analysis.](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) But it's risky to buy as a stock trends lower.  
 
 
-Shares of Meta closed further below their flat base's 602.95 buy point, after a 0.3% decline. Wait for a decisive retake of that entry before considering a new purchase of shares.  
-Meta 的股价在下跌 0.3% 后进一步低于其平底的 602.95 买入点。等待决定性地重新获得该条目，然后再考虑购买新的股票。
+Shares of Meta closed further below their flat base's 602.95 buy point, after a 0.3% decline. Wait for a decisive retake of that entry before considering a new purchase of shares.  
 
 
-Taiwan Semiconductor, better known as TSMC, closed right at its 50-day line, about 5% away from a 205.63 cup-with-handle buy point.  
-台积电（Taiwan Semiconductor），更广为人知的名字是台积电（TSMC），收于其 5 日线，距离 205.63 的带手柄杯买入点约 5%。
+Taiwan Semiconductor, better known as TSMC, closed right at its 50-day line, about 5% away from a 205.63 cup-with-handle buy point.  
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.* 
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121924.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121924.pdf) 
 
 
 
 
-**YOU MAY ALSO LIKE:  您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 
 
 
 
